# SFML_Platformer

./: CMakeLists.txt  Game.cpp  Game.hpp  Player.cpp  Player.hpp  main.cpp
CppFiles/: main.cpp
CppFiles/Engine/: Game.cpp  Game.hpp  State.hpp  main.cpp
CppFiles/Engine/Physics/: Collider.cpp  Collider.hpp
CppFiles/Engine/States/: Game.hpp  GameState.cpp  GameState.hpp  State.cpp
CppFiles/GameExec/: Game.cpp  main.cpp
CppFiles/GameObjects/: Player.cpp  Player.hpp
CppFiles/Physics/: Collider.cpp
HeaderFiles/: Collider.hpp  Game.hpp  Player.hpp
